<resources>
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="app_name">Food Crunch Client</string>
    <string name="slogan">No matter the time or place we will find you and we will feed you!</string>
    <string name="Signup">no account ? SIGN UP !</string>
    <string name="Signin">SIGN IN and eat fresh</string>
    <string name="enter_your_phone_number">ENTER YOUR PHONE </string>
    <string name="_7208680470">7208680470</string>
    <string name="enter_your_name">ENTER YOUR NAME</string>
    <string name="enter_your_password">ENTER PASSWORD</string>
=======
=======
>>>>>>> old1/master
=======
>>>>>>> old2/master
    <string name="app_name">FoodCrunch</string>
    <string name="slogan">No matter the time or place we will find you and we will feed you!</string>
    <string name="Signup">no account ? SIGN UP !</string>
    <string name="Signin">SIGN IN and eat fresh</string>
    <string name="enter_your_phone_number">Enter your Phone </string>
    <string name="_7208680470">7208680470</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="enter_your_password">Enter Password</string>
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> old3/master
=======
>>>>>>> old1/master
=======
>>>>>>> old2/master
    <string name="_11111111">11111111</string>
    <string name="test1">sign in with   .   .   .google</string>
    <string name="test2">sign in with facebook</string>
    <string name="test3">sign in with linkedin</string>
    <string name="test4">sign in with twitter</string>
    <string name="test5">sign in with github</string>
    <string name="test6">sign in with phone</string>
    <string name="test7">test7</string>
    <string name="test8">test8</string>
    <string name="title_activity_home">Home</string>

<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
>>>>>>> old2/master
    <string name="com.twitter.sdk.android.CONSUMER_KEY">	6ep60jj09lvUcHncYM3yCoIMr</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">	WXvH93jw1urHD9IzIk6FDRmKW0X5LGZgmMCDo67XFk2uDf2LGJ
</string>

<<<<<<< HEAD
>>>>>>> old1/master
=======
>>>>>>> old2/master
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="food_crunch">Food Crunch</string>
    <string name="name_of_food">Name of Food</string>
    <string name="name_of_menu">Name of Menu</string>
    <string name="nihal">Nihal</string>
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
    <string name="menu">MENU</string>
    <string name="cart">MY CART</string>
    <string name="orders">MY ORDER</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="food">FOOD</string>
    <string name="food_name">FOOD NAME</string>
    <string name="action_settings">SETTINGS</string>
    <string name="total">TOTAL :</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="food_01">Food 01</string>
    <string name="_90000">90000</string>
    <string name="_50">50</string>
    <string name="_9000">9000</string>
    <string name="description">DESCRIPTION</string>
    <string name="_11111">11111</string>
    <string name="status">status</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="_100">100</string>
    <string name="_0">0</string>
    <string name="ordersreport">MY ORDER STATUS</string>
    <string name="refresh">REFRESH</string>
    <string name="RememberMe">REMEMBER ME</string>
    <string name="SecureCode">SECURE CODE FOR PASSWORD RECOVERY</string>
    <string name="forget_pwd"><u>FORGOT YOUR PASSWORD ?</u></string>
    <string name="Please_enter_your_address">ENTER YOUR EMAIL ADDRESS</string>
    <string name="Write_comment">COMMENT HERE</string>
    <string name="todo">TODO</string>
    <string name="_0_">0</string>
    <string name="my_new_address">MY NEW ADDRESS</string>
    <string name="Please_select_a_category">SELECT CATEGORY</string>
    <string name="Todays_Speciality">TODAYS SPECIALITY</string>
    <string name="Your_cart">Long click to remove</string>
    <string name="Your_orders_from_Today">YOUR ORDER HISTORY TAP FOR MORE</string>
    <string name="SELECT_YOUR_FOOD">SELECT YOUR FOOD !!!</string>
    <string name="product_name">product name</string>
    <string name="product_quantity">product quantity</string>
    <string name="product_discount">product discount</string>
    <string name="product_price">product price</string>
    <string name="Details">ITEMS IN YOUR ORDER </string>
    <string name="enter_your_email">ENTER YOUR EMAIL</string>
    <string name="nhlvcam">nhlvcam@gmail.com</string>
    <string name="enter_your_home_address">ENTER YOUR HOME ADDRESS</string>
    <string name="enter_your_email_address">ENTER YOUR EMAIL ADDRESS</string>
    <string name="favorites">FAVORITES</string>
    <string name="home_address">HOME ADDRESS</string>
    <string name="email_address">EMAIL ADDRESS</string>
    <string name="welcome">WELCOME !!</string>
    <string name="facebook_app_id">1841890425883573</string>
    <string name="facebook_login_protocall_name">fb1841890425883573</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="Category_name">CATEGORY NAME</string>
    <string name="SelectImage"><![CDATA[SELECT IMAGE ->]]></string>
    <string name="UploadImage">UPLOAD IMAGE</string>
    <string name="com.twitter.sdk.android.CONSUMER_KEY">6ep60jj09lvUcHncYM3yCoIMr</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">WXvH93jw1urHD9IzIk6FDRmKW0X5LGZgmMCDo67XFk2uDf2LGJ</string>
    <string name="Food_name">FOOD NAME</string>
    <string name="Description">DESCRIPTION</string>
    <string name="Price">PRICE</string>
    <string name="Discount">DISCOUNT</string>
    <string name="enter_new_password">ENTER NEW PASSOWRD</string>
    <string name="repeat_new_passowrd">REPEAT NEW PASSOWRD</string>
    <string name="EMPTY_LIST">THIS SEEMS TO BE EMPTY</string>
    <string name="clear_cart">CLEAR CART</string>
    <string name="delete_user_data">DELETE USER DATA</string>
    <string name="_9619662497">9619662497</string>
    <string name="ship_to_this_address">SHIP TO THIS ADDRESS</string>
    <string name="ship_to_home">SHIP TO HOME</string>
    <string name="sweety_4august_yahoo_com">sweety_4august@yahoo.com</string>
    <string name="resend_login_details">RESEND LOGIN</string>
    <string name="chanhe_email_address">CHANGE EMAIL ADDRESS</string>
    <string name="MY_favorites">MY FAVORITES</string>
    <string name="ship_to_Current">SHIP TO HERE</string>
    <string name="ship_to_CurrentLocation">SHIP TO CURRENT LOCATION</string>
    <string name="enter_your_email_addressil">EMAIL ENTER</string>
    <string name="MY_home_address">UPDATE HOME ADDRESS</string>
    <string name="shopping_list">GRODERY LIST</string>
    <string name="about">ABOUT</string>
    <string name="simsimi_api">627475a9-4868-44fb-b8f8-c791b35f13c5</string>
    <string name="chat">CHAT</string>
    <string name="utilities">UTILITIES</string>
    <string name="tips_and_tricks">TIPS AND TRICKS</string>
    <string name="MY_NEW_FOOD">ADD TASK</string>
    <string name="GORCERYLIST">YOUR GROCERY LIST</string>
    <string name="delete">DELETE</string>
    <string name="CLEARLIST">CLEAR ALL LIST</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="chatbot">CHAT BOT</string>
    <string name="double_press">TAP SEND AGAIN IN CASE NO RESPONSE</string>
    <string name="Shoecomments">SHOW REVIEWS</string>
    <string name="ifyouseeblank">IF YOU SEE BLANK REPLY YOU EXPIRED QUOTA OF DAY</string>
    <string name="resend_login">RESEND LOGIN</string>
    <string name="change_name">CHANGE NAME</string>
    <string name="update">UPDATE</string>
    <string name="order">ORDER</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="misc">MISC</string>
    <string name="log_out">LOG OUT</string>
    <string name="shipping_method">SHIPPING METHOD</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="cash_on_delivery">CASH ON DELIVERY</string>
    <string name="paypal">PAYPAL</string>
    <string name="food_crunch_balance_points">FOOD CRUNCH BALANCE POINTS</string>
    <string name="example">Example</string>
    <string name="enter_your_USERNAME">ENTER USER NAME</string>
    <string name="ordefoodcrunchbalance">FOOD CRUNCH BALANCE</string>
    <string name="GO_IN">GO IN</string>
    <string name="recepie">Recepie</string>
    <string name="decsription_n">decsription</string>
    <string name="Your_cartS">LONG CLICK OR SWIPE LEFT TO REMOVE ITEM</string>
    <string name="GORCERYLISTS">NOTE : GROCERY LIST CLEARED ON BACK PRESS AND ADD USING + </string>
    <string name="subscribe_to_news_and_offers">SUBSCRIBE TO NEWS AND OFFERS</string>
    <string name="settings">SETTINGS</string>
    <string name="add_to_cart_fav_list_quickly">ADD TO CART/FAV LIST/SHARE TO FB </string>
    <string name="SEARCH">SEARCH ALL</string>
    <string name="TUTORIAL">TUTORIAL</string>
    <string name="add_to_cart">ALL YOUR FAVORITES ALL THE TIME TO DELETE SWIPE LEFT</string>
    <string name="favoritelist">YOUR FAVORITES</string>
    <string name="search_all_food_at_once">SEARCH ALL FOOD AT ONCE</string>
=======
=======
>>>>>>> old1/master
=======
>>>>>>> old2/master
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="sign_out">Sign Out</string>
    <string name="food">Food</string>
    <string name="food_name">Food Name</string>
    <string name="action_settings">Settings</string>
    <string name="total">Total :</string>
    <string name="place_order">Place Order</string>
    <string name="food_01">Food 01</string>
    <string name="_90000">90000</string>
    <string name="todo">TODO</string>
    <string name="_50">50</string>
    <string name="_9000">9000</string>
    <string name="description">description</string>
    <string name="_11111">11111</string>
    <string name="b_604_mai_bhuvan_dadi_seth_rd_malad_west_mumbai_maharashtra">B/604,Mai Bhuvan Dadi Seth Rd Malad West Mumbai Maharashtra</string>
    <string name="status">status</string>
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> old3/master
=======
>>>>>>> old1/master
=======
>>>>>>> old2/master
</resources>
