<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardElevation="5dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="9"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cart_item_name"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:text="@string/food_01"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cart_item_Price"
                android:layout_marginStart="10dp"
                android:layout_gravity="center_vertical"
                android:textAllCaps="true"
                android:textStyle="italic"
                android:text="@string/_50"
                />

        </LinearLayout>

        <ImageView
            android:layout_width="20dp"
            android:id="@+id/cart_item_count"
            android:layout_gravity="center_vertical"
            android:layout_height="20dp"
            android:layout_marginEnd="20dp"

            android:contentDescription="@string/todo" />


    </LinearLayout>

</android.support.v7.widget.CardView>