<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
<<<<<<< HEAD
<<<<<<< HEAD
    tools:context="a123.vaidya.nihal.foodcrunchclient.Signup">
=======
    tools:context="com.nihalvaidya123.foodcrunch.Signup">
>>>>>>> old3/master
=======
    tools:context="com.nihalvaidya123.foodcrunch.Signup">
>>>>>>> old1/master


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
<<<<<<< HEAD
        android:layout_alignParentTop="true"
=======
        android:layout_alignParentBottom="true"
>>>>>>> old3/master
=======
        android:layout_alignParentBottom="true"
>>>>>>> old1/master
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
<<<<<<< HEAD
<<<<<<< HEAD

=======
        android:paddingBottom="200dp"
>>>>>>> old3/master
=======
        android:paddingBottom="200dp"
>>>>>>> old1/master
        android:weightSum="2">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone"
<<<<<<< HEAD
<<<<<<< HEAD
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:gravity="center"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_minCharacters="10"
=======
=======
>>>>>>> old1/master
            android:text="@string/_7208680470"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
<<<<<<< HEAD
>>>>>>> old3/master
=======
>>>>>>> old1/master
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtName"
<<<<<<< HEAD
<<<<<<< HEAD
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="128"
            app:met_minCharacters="1"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtbalance"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:text="@string/_100"
            android:visibility="gone"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="128"
            app:met_minCharacters="1"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="textMultiLine"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:gravity="center"
            android:visibility="visible"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="128"
            app:met_minCharacters="8"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtHomeAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:gravity="center"
            android:visibility="gone"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="128"
            app:met_minCharacters="8"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPasswd1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:gravity="center"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="128"
            app:met_minCharacters="8"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtSecureCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/SecureCode"
            android:inputType="text"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="19sp"
            android:gravity="center"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="128"
            app:met_minCharacters="8"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />
=======
=======
>>>>>>> old1/master
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name"
            android:inputType="textPersonName"
            android:text="@string/nihal"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPasswd"
            android:layout_width="match_parent"
            android:layout_height="132dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:text="@string/_11111111"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

<<<<<<< HEAD
>>>>>>> old3/master
=======
>>>>>>> old1/master

    </LinearLayout>

    <info.hoang8f.widget.FButton
<<<<<<< HEAD
<<<<<<< HEAD
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/Signup"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:buttonColor="@color/colorAccent"
        app:shadowColor="@android:color/black"
        app:shadowHeight="5dp" />
=======
=======
>>>>>>> old1/master
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignup"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/Signup"
        app:shadowColor="@android:color/black"
        app:buttonColor="@color/colorAccent"
        app:shadowHeight="5dp"
        />
<<<<<<< HEAD
>>>>>>> old3/master
=======
>>>>>>> old1/master



</RelativeLayout>
