<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
    tools:context="a123.vaidya.nihal.foodcrunchclient.Signin">
=======
    tools:context="com.nihalvaidya123.foodcrunch.Signin">
>>>>>>> old3/master
=======
    tools:context="com.nihalvaidya123.foodcrunch.Signin">
>>>>>>> old1/master
=======
    tools:context="com.nihalvaidya123.foodcrunch.Signin">
>>>>>>> old2/master

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical"
        android:weightSum="2">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_your_phone_number"
            android:inputType="phone"
            android:text="@string/_9619662497"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_minCharacters="10"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/edtPasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:text="@string/_11111111"
            android:textColor="@android:color/white"
            android:textSize="36sp"
            app:met_maxCharacters="128"
            app:met_minCharacters="8"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.rey.material.widget.CheckBox
                android:id="@+id/remember_button"
                style="@style/Material.Drawable.CheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/RememberMe"
                android:textColor="@android:color/white"
                android:textSize="24sp">

            </com.rey.material.widget.CheckBox>

            <TextView
                android:id="@+id/forget_password_txt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/forget_pwd"
                android:textColor="@color/white"
                android:textSize="24sp" />


        </LinearLayout>
=======
=======
>>>>>>> old1/master
=======
>>>>>>> old2/master
        android:layout_centerInParent="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:weightSum="2"
        android:orientation="vertical"
        android:paddingBottom="300dp">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPhone"
            android:hint="@string/enter_your_phone_number"
            android:text="@string/_7208680470"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:inputType="phone"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />

        <!--<com.rengwuxian.materialedittext.MaterialEditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/edtName"-->
            <!--android:hint="@string/enter_your_name"-->
            <!--android:text="@string/nihal"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:textSize="40sp"-->
            <!--android:inputType="textPersonName"-->
            <!--app:met_baseColor="@android:color/white"-->
            <!--app:met_floatingLabel="highlight"-->
            <!--app:met_maxCharacters="11"-->
            <!--app:met_primaryColor="@android:color/white"-->
            <!--app:met_singleLineEllipsis="true"-->
            <!--/>-->


        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtPasswd"
            android:hint="@string/enter_your_password"
            android:text="@string/_11111111"
            android:textColor="@android:color/white"
            android:textSize="40sp"
            android:inputType="textPassword"
            app:met_baseColor="@android:color/white"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="11"
            app:met_primaryColor="@android:color/white"
            app:met_singleLineEllipsis="true"
            />
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> old3/master
=======
>>>>>>> old1/master
=======
>>>>>>> old2/master


    </LinearLayout>


    <info.hoang8f.widget.FButton
<<<<<<< HEAD
<<<<<<< HEAD
<<<<<<< HEAD
        android:id="@+id/btnSignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/Signin"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:shadowColor="@android:color/black"
        app:shadowHeight="5dp" />
=======
=======
>>>>>>> old1/master
=======
>>>>>>> old2/master
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignin"
        android:textColor="@android:color/white"
        android:layout_margin="5dp"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/Signin"
        app:shadowColor="@android:color/black"
        app:shadowHeight="5dp"
        />
<<<<<<< HEAD
<<<<<<< HEAD
>>>>>>> old3/master
=======
>>>>>>> old1/master
=======
>>>>>>> old2/master



</RelativeLayout>
